--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic Node.js server\r Hi change File\r test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
